--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+	<color name="colorPrimary">#3f51b5</color>
+	<color name="colorAccent">#757de8</color>
+	<color name="colorPrimaryDark">#002984</color>
+	<color name="secondaryColor">#80deea</color>
+	<color name="secondaryLightColor">#b4ffff</color>
+	<color name="secondaryDarkColor">#4bacb8</color>
+	<color name="primaryTextColor">#ffffff</color>
+	<color name="secondaryTextColor">#000000</color>
 </resources>
