--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -3,6 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:layout_margin="16dp"
+        android:padding="4dp"
         android:layout_height="match_parent"
         android:layout_width="match_parent" android:id="@+id/scrollView2">
 
@@ -13,9 +15,10 @@
             android:layout_height="match_parent">
 
 
+
         <ImageView
                 android:layout_width="312dp"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:layout_height="314dp" tools:srcCompat="@tools:sample/avatars"
                 android:id="@+id/image_view2"
                 android:src="@drawable/wallpaper_astronomy_astrophotography_2538107"
@@ -29,23 +32,25 @@
 
         <ImageView
                 android:layout_width="346dp"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:layout_height="254dp" tools:srcCompat="@tools:sample/avatars"
                 android:id="@+id/image_view1"
                 android:src="@drawable/architectural_design_architecture_bridge_2540653"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/image_view"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintTop_toBottomOf="@+id/image_view" android:layout_marginTop="16dp"/>
+                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.629"
+                app:layout_constraintTop_toBottomOf="@+id/image_view"
+                app:layout_constraintBottom_toTopOf="@+id/image_view" app:layout_constraintVertical_bias="0.0"/>
 
         <ImageView
                 android:layout_width="290dp"
-                android:padding="8dp"
+                android:padding="4dp"
                 android:src="@drawable/afterglow_beach_cliff_2555285"
                 android:layout_height="309dp" tools:srcCompat="@tools:sample/avatars"
                 android:id="@+id/image_view" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
