--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,59 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<GridLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="8dp"
+        android:layout_gravity="center_vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_margin="16dp"
-        android:padding="4dp"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" android:id="@+id/scrollView2">
+        xmlns:tools="http://schemas.android.com/tools">
+    <LinearLayout
+            android:layout_gravity="center"
+            android:layout_height="158dp"
+            android:layout_width="229dp">
 
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+
+                android:layout_width="250dp"
+                android:padding="8dp"
+                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+
+            <ImageView
+
+                    android:layout_width="150dp"
+                    android:padding="8dp"
+                    android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
+                    android:id="@+id/image_view"
+                    android:src="@drawable/adventure_automobile_classic_2533092"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"/>
+
+
+            <TextView
+                    android:text="Title"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/image_title"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintHorizontal_bias="0.859"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.221"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+            <TextView
+                    android:text="Description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/image_description"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.366"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="160dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                    app:layout_constraintHorizontal_bias="0.041" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-
-        <ImageView
-                android:layout_width="312dp"
-                android:padding="4dp"
-                android:layout_height="314dp" tools:srcCompat="@tools:sample/avatars"
-                android:id="@+id/image_view2"
-                android:src="@drawable/wallpaper_astronomy_astrophotography_2538107"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintVertical_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/image_view1"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
+            android:layout_width="171dp"
+            android:layout_height="173dp" android:layout_row="1" android:layout_column="0">
 
 
         <ImageView
-                android:layout_width="346dp"
-                android:padding="4dp"
-                android:layout_height="254dp" tools:srcCompat="@tools:sample/avatars"
+                android:layout_width="150dp"
+                android:padding="8dp"
+                android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
                 android:id="@+id/image_view1"
-                android:src="@drawable/architectural_design_architecture_bridge_2540653"
+                android:src="@drawable/abstract_abstract_expressionism_art_2505693"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/image_view"
-                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.629"
-                app:layout_constraintTop_toBottomOf="@+id/image_view"
-                app:layout_constraintBottom_toTopOf="@+id/image_view" app:layout_constraintVertical_bias="0.0"/>
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="parent"/>
 
-        <ImageView
-                android:layout_width="290dp"
-                android:padding="4dp"
-                android:src="@drawable/afterglow_beach_cliff_2555285"
-                android:layout_height="309dp" tools:srcCompat="@tools:sample/avatars"
-                android:id="@+id/image_view" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_row="1" android:layout_column="0">
 
 
-</ScrollView>
+        <ImageView
+                android:layout_width="150dp"
+                android:padding="8dp"
+                android:src="@drawable/afterglow_beach_cliff_2555285"
+                android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
+                android:id="@+id/image_view2"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+            android:layout_width="171dp"
+            android:layout_height="173dp" android:layout_row="1" android:layout_column="0">
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:layout_row="2" android:layout_column="0">
+
+
+        <ImageView
+                android:layout_width="150dp"
+                android:src="@drawable/wallpaper_astronomy_astrophotography_2538107"
+                android:padding="8dp"
+                android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
+                android:id="@+id/image_view3"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintVertical_bias="1.0" app:layout_constraintEnd_toEndOf="parent"/>
+        <ImageView
+                android:src="@drawable/architectural_design_architecture_bridge_2540653"
+                android:layout_width="150dp"
+                android:padding="8dp"
+                android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
+                android:id="@+id/image_view4"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"/>
+
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</GridLayout>
