--- a/app/src/main/res/layout/image_view_layout.xml
+++ b/app/src/main/res/layout/image_view_layout.xml
@@ -1,54 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-
-    <ImageView
-            android:layout_width="150dp"
-            android:padding="8dp"
-            android:layout_height="150dp" tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/image_view"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toEndOf="parent"/>
-
-
-    <TextView
-            android:text="Title"
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/image_title"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.152"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="Description:"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/image_description"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.366"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="160dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.041" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout
+        android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"/>
