--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -6,13 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ListActivity">
+        tools:context=".ListActivity"
+        android:background="@color/colorAccent"
+>
 
-   <ImageView
-
-           android:background="@drawable/purplecity"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"/>
 
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
